argocd/apps/demo/demo-app-go/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-svc
spec:
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
