argocd/apps/demo/demo-app-go/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - demo.app.lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
