argocd/apps/demo/demo-app-go/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtualservice
spec:
  gateways:
    - default/demo-app-gateway
  hosts:
    - demo.app.lab.k8s.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: default.webapp-svc.svc.cluster.local
            port:
              number: 8080
          weight: 100
